# Taxi_database_On_txt

./: AdminGateway.cpp  AdminGateway.h  CMakeLists.txt  Car.cpp  Car.h  CarTypes.h  CoordinateSystem.cpp  CoordinateSystem.h  DataBase.cpp  DataBase.h  Devices.cpp  Devices.h  DriverGateway.cpp  DriverGateway.h  PassengerGateway.cpp  PassengerGateway.h  README.txt  System.cpp  System.h  Users.cpp  Users.h  main.cpp
